examples/sample-product-chart/chart-test/reports/scenario-gateway-api-envoy-gateway-grpcroute-20260531-183758-5/artifacts/manifests/deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: "2026-05-31T22:38:45Z"
    generation: 1
    name: grpc-backend
    namespace: sample
    resourceVersion: "689"
    uid: 11b9b75f-e4e9-4aa0-b6e2-8427130eb534
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: grpc-backend
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: grpc-backend
      spec:
        containers:
        - env:
          - name: POD_NAME
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.name
          image: docker.io/moul/grpcbin:latest
          imagePullPolicy: IfNotPresent
          name: grpc-server
          ports:
          - containerPort: 9000
            name: grpc
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 3
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 9000
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-05-31T22:38:50Z"
      lastUpdateTime: "2026-05-31T22:38:50Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-05-31T22:38:45Z"
      lastUpdateTime: "2026-05-31T22:38:50Z"
      message: ReplicaSet "grpc-backend-775f8dc876" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      meta.helm.sh/release-name: sample
      meta.helm.sh/release-namespace: sample
    creationTimestamp: "2026-05-31T22:38:45Z"
    generation: 1
    labels:
      app: sample
      app.kubernetes.io/component: skywatcher
      app.kubernetes.io/instance: sample
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: sample-product
      app.kubernetes.io/version: 1.0.0
      helm.sh/chart: sample-product-0.1.0
    name: sample
    namespace: sample
    resourceVersion: "681"
    uid: dd3f2b3a-672c-4978-8d7f-66940d2a189e
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: sample
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: sample
          app.kubernetes.io/component: skywatcher
          app.kubernetes.io/instance: sample
          app.kubernetes.io/managed-by: Helm
          app.kubernetes.io/name: sample-product
          app.kubernetes.io/version: 1.0.0
          helm.sh/chart: sample-product-0.1.0
      spec:
        containers:
        - image: nginx:1.27-alpine
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: app
          ports:
          - containerPort: 80
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-05-31T22:38:48Z"
      lastUpdateTime: "2026-05-31T22:38:48Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-05-31T22:38:45Z"
      lastUpdateTime: "2026-05-31T22:38:48Z"
      message: ReplicaSet "sample-7dcd986bd4" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
