examples/sample-product-chart/chart-test/reports/scenario-gateway-api-envoy-gateway-grpcroute-20260531-183758-5/artifacts/manifests/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-05-31T22:38:45Z"
    name: grpc-backend
    namespace: sample
    resourceVersion: "624"
    uid: 136f4846-34b3-4557-a53d-c8495c4dce71
  spec:
    clusterIP: 10.96.152.36
    clusterIPs:
    - 10.96.152.36
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: grpc
      port: 9000
      protocol: TCP
      targetPort: 9000
    selector:
      app: grpc-backend
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: sample
      meta.helm.sh/release-namespace: sample
    creationTimestamp: "2026-05-31T22:38:45Z"
    labels:
      app.kubernetes.io/managed-by: Helm
    name: sample
    namespace: sample
    resourceVersion: "640"
    uid: 3b4dbc3f-43c2-4136-be8c-b6f3d1b9ea97
  spec:
    clusterIP: 10.96.84.38
    clusterIPs:
    - 10.96.84.38
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: sample
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
